# ttne-display

./: .gitignore  CMakeLists.txt  README.md
app/: app_state.c  app_state.h
backend/: backend.h  backend_real.c  backend_sim.c
cmake/: GitVersion.cmake
docs/: PHASE1_AUDIT.md
include/: alarms.h  config.h  controller.h  custom_tick.h  http_async.h  http_helper.h  json_helper.h  lv_conf.h  lv_drv_conf.h  models.h  runbg.h  scr_alarms.h  scr_current.h  scr_diagnose.h  scr_info.h  scr_init.h  scr_keyboard.h  scr_login.h  scr_outlet_data.h  scr_outlets.h  scr_power.h  scr_power_data.h  scr_sensors.h  scr_sensors_data.h  scr_settings.h  scr_settings_menu.h  scr_settings_nw.h  scr_settings_nw_blue.h  scr_settings_nw_eth.h  scr_settings_nw_menu.h  scr_settings_nw_modbus.h  scr_settings_nw_ntp_sntp.h  scr_settings_nw_snmp.h  scr_settings_nw_ssh.h  scr_settings_sys.h  scr_settings_sys_info.h  scr_settings_upd.h  scr_settings_vis.h  scr_splash.h  scr_support.h  (+7 more)
lv_drivers/: CMakeLists.txt
lv_drivers/indev/: evdev.c
lvgl/src/widgets/label/: lv_label.c
src/: alarms.c  config.c  controller.c  custom_tick.c  http_async.c  http_helper.c  json_helper.c  main.c  models.c  runbg.c  scr_alarms.c  scr_current.c  scr_diagnose.c  scr_info.c  scr_init.c  scr_keyboard.c  scr_login.c  scr_outlet_data.c  scr_outlets.c  scr_power.c  scr_power_data.c  scr_sensors.c  scr_sensors_data.c  scr_settings.c  scr_settings_menu.c  scr_settings_nw.c  scr_settings_nw.c.bak  scr_settings_nw_blue.c  scr_settings_nw_eth.c  scr_settings_nw_menu.c  scr_settings_nw_modbus.c  scr_settings_nw_ntp_sntp.c  scr_settings_nw_snmp.c  scr_settings_nw_ssh.c  scr_settings_sys.c  scr_settings_sys_info.c  scr_settings_upd.c  scr_settings_vis.c  scr_splash.c  scr_support.c  (+5 more)
